fixed hero image not showing on mobile, reduced secondary heading font size and small layout adjustements for mobile

--- a/css/query.css
+++ b/css/query.css
@@ -10,6 +10,10 @@
     display: none;
   }
 
+  .hero-img.desktop-hidden {
+    display: block;
+  }
+
   .header {
     max-width: 100vw;
   }
@@ -40,9 +44,10 @@
     flex-direction: column;
     justify-content: center;
     margin: 0 auto 0 auto;
-    padding: 0 4rem 0 4rem;
+    padding: 0 2rem 0 2rem;
 
     font-size: smaller;
+    text-align: center;
   }
 
   .hero-text-box {
@@ -58,6 +63,10 @@
     /* margin-bottom: 3.2rem; */
     color: var(--primary-color);
     /* color: #333; */
+  }
+
+  .hero-img {
+    width: 100%;
   }
 
   .nav-bar.sticky {
@@ -238,5 +247,9 @@
     transition: all 0.5s;
 
     border-radius: 9px;
+  }
+
+  .heading-secondary {
+    font-size: 4rem;
   }
 }
