--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,8 @@
 }
 
 .nav-bar.sticky {
+  width: 100vw;
+
   position: fixed;
   background-color: rgba(255, 255, 255, 0.95);
   height: 7rem;
